--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@ p{margin-bottom:18px;font-size:15px}
       <img src="globe.svg" alt="语言切换">
     </button>
     <div class="lang-menu">
-      <a href="index.html">中文（简体）</a>
-      <a href="index-tw.html">中文（繁体）</a>
-      <a href="index-en.html">English</a>
+      <a href="https://lamp23333.github.io/index.html">中文（简体）</a>
+      <a href="https://lamp23333.github.io/index-tw.html">中文（繁体）</a>
+      <a href="https://lamp23333.github.io/index-en.html">English</a>
     </div>
   </div>
 </div>
