--- a/beta/index-tc.html
+++ b/beta/index-tc.html
@@ -7,7 +7,7 @@
 
 <title>lamp23333 - 個人網站</title>
 
-<link rel="stylesheet" href="/bata/style.css">
+<link rel="stylesheet" href="/beta/style.css">
 <link rel="icon" type="image/x-icon" href="/beta/favicon/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="/beta/favicon/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/beta/favicon/favicon-32x32.png">
